Fix scrollbar in settings

--- a/client/src/app/modals/components/settings/theme-settings/theme-settings.component.scss
+++ b/client/src/app/modals/components/settings/theme-settings/theme-settings.component.scss
@@ -16,6 +16,12 @@
     margin: 4px;
 }
 
+.toggle-title {
+    padding-top: 16px;
+    padding-right: 4px;
+    text-align: center;
+}
+
 .mat-slide-toggle {
     align-self: center;
     margin-left: 4px;
